--- a/templates/home.html
+++ b/templates/home.html
@@ -7,5 +7,6 @@
 <body>
 <h1>Weather Dta Api</h1>
 <p>url format: http://127.0.0.1:5000/api/v1/station/date</p>
+<p>url Example: http://127.0.0.1:5000/api/v1/10/1988-10-23</p>
 </body>
 </html>
