--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,9 @@
 <body>
 <h1>Weather Dta Api</h1>
 <p>url format: http://127.0.0.1:5000/api/v1/station/date</p>
-<p>url Example: http://127.0.0.1:5000/api/v1/10/1988-10-23</p>
+<p>For one station for one date: http://127.0.0.1:5000/api/v1/10/1988-10-23</p>
+<p>For one station all dates: http://127.0.0.1:5000/api/v1/10</p>
+<p>For one station for one year: http://127.0.0.1:5000/api/v1/yearly/10/1988</p>
 <p>{{data|safe}}</p>
 </body>
 </html>
